--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,34 @@
 body {
     background: orange;
-    
+    font-family: Helvetica, Arial, sans-serif;
+    margin: 0;
+    display: grid;
+    align-content: center;
+    min-height: 100vh;
+}
+
+h1 {
+    font-size: 48px;
+    text-transform: uppercase;
+    text-align: center;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+
+h2 {
+    text-align: center;
+}
+
+p {
+    color: white;
+    max-width: 30em;
+    margin: 0 auto;
+}
+
+u1 {
+    margin: 0 auto;
+    padding: 0;
+}
+
+a {
+    color: white;
 }
