Made a ton of changes

--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,131 @@
-body {
-    background: orange;
-    font-family: Helvetica, Arial, sans-serif;
-    margin: 0;
+/* GLOBAL RESET */
+* { box-sizing: border-box; }
+body { margin: 0 }
+
+/* GLOBAL COLORS */
+body { color: rgba(0, 0, 0, 0.8); }
+a { color: rgba(0, 102, 204, 1); }
+a:hover { color: rgb(252, 250, 250); }
+
+/* GLOBAL TYPOGRAPHY */
+body { 
+    font-family: Arial, Helvetica, sans-serif;
+font-size: 88.75%; /* 14px */
+line-height: 1.4;
+}
+
+
+/*HEADER */
+
+
+header {
+    background-color: rgb(245, 104, 10);
+    color: rgba(138, 2, 2, 0.8);
+    padding: 1em;
     display: grid;
-    align-content: center;
-    min-height: 100vh;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
 }
 
-h1 {
-    font-size: 48px;
-    text-transform: uppercase;
-    text-align: center;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+header a {
+    color: rgb(83, 80, 80);
+    text-decoration: underline;
 }
 
-h2 {
-    text-align: center;
+header a:hover {
+    color: rgba(255, 255, 255, 1);
 }
 
-p {
-    color: white;
-    max-width: 30em;
-    margin: 0 auto;
+
+/* SITE ID */
+
+
+.site-id h1 {
+    margin: 0;
 }
 
-u1 {
-    margin: 0 auto;
+
+/* SITE NAV */
+
+
+.site-nav ul {
+    display: flex;
+    justify-content: flex-end;
+    margin: 0;
     padding: 0;
+    list-style: none;
 }
 
-a {
-    color: white;
+.site-nav a {
+    display: block;
+    padding: 1em;
+}
+
+
+/*MAIN */
+
+
+main {
+    background:rgb(130, 0, 109)
+}
+
+
+/* FOOTER */
+footer {
+    border-top: 1px solid rgba(0,0,0,.05);
+    padding: 1em;
+}
+
+/* SOCIAL NAV */
+.social-nav ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    list-style:none;
+}
+
+.social-nav a {
+    display: block;
+    padding: 1em;
+}
+
+
+/* HERO SECTION */
+
+
+.hero {background-color: brown;
+text-align: center;
+color: antiquewhite;
+padding: 6em 1 em;
+}
+
+.hero h2 {
+    font-size: 6em;
+    line-height: 1;
+    text-transform: uppercase;
+    margin: 0 auto;
+}
+
+.hero p {
+    max-width: 30em;
+    margin: 1em auto;
+}
+
+
+/* COURSES SECTION */
+.courses {
+    padding: 6em 1em;
+    display: grid;
+    justify-content: center;
+}
+
+.courses ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.courses h3 {
+    text-align: center;
 }
