--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,13 @@ body { margin: 0 }
 /* GLOBAL COLORS */
 body { color: rgba(0, 0, 0, 0.8); }
 a { color: rgb(0, 1, 3); }
-a:hover { color: rgb(252, 250, 250); }
+a:hover { color: rgb(34, 77, 252); }
 
 /* GLOBAL TYPOGRAPHY */
 body { 
     font-family: Arial, Helvetica, sans-serif;
-font-size: 88.75%; /* 14px */
-line-height: 1.4;
+    font-size: 88.75%; /* 14px */
+    line-height: 1.4;
 }
 
 
@@ -94,11 +94,11 @@ footer {
 /* HERO SECTION */
 
 
-.hero 
-{background-color: rgb(245, 104, 10);
-text-align: center;
-color: antiquewhite;
-padding: 6em 1 em;
+.hero {
+    background-color: rgb(245, 104, 10);
+    text-align: center;
+    color: antiquewhite;
+    padding: 6em 1em;
 }
 
 .hero h2 {
