--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
 body { margin: 0 }
 
 /* GLOBAL COLORS */
-body { color: rgba(0, 0, 0, 0.8); }
-a { color: rgb(0, 1, 3); }
+body { color: rgba(245, 104, 10); }
+a { color: rgb(3, 1, 0); }
 a:hover { color: rgb(34, 77, 252); }
 
 /* GLOBAL TYPOGRAPHY */
