--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ aside {
 }
 
 @media (min-width: 768px) {
-    .two-col sidebar {
+    .two-col-sidebar {
         display: grid;
         grid-template-columns: 20em auto;
     }
