--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ main {
 footer {
     border-top: 1px solid rgba(0,0,0,.05);
     padding: 1em;
+    background-color:rgb(201, 32, 54)
 }
 
 /* SOCIAL NAV */
