--- a/art128/base-content/css/style.css
+++ b/art128/base-content/css/style.css
@@ -29,9 +29,47 @@
 --------------------------------- */
 
 
-/*  Typorgaphy */
+/*  Typogaphy  - BASE BODY */
 
 body {
-    font-size: 87.5%; /* 14px */
+    font-size: 87.5%; /* 16px = 1em */
     font-family: Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    color: rgba(0, 0, 0, .8);
+}
+
+/* HEADINGS */
+/*
+    Based on a Traditional Typographic Scale
+    18, 36, 24, 21, 18, 16
+*/
+
+h1 {
+    font-size: 3em; /* 48px */
+    line-height: 1;
+}
+
+h2 {
+    font-size: 2.25em; /* 36px */
+    line-height: 1;
+}
+
+h3 {
+    font-size: 1.5em; /* 24px */
+    line-height: 1;
+}
+
+h4 {
+    font-size: 1.3125em; /* 21px */
+    line-height: 1;
+}
+
+h5 {
+    font-size: 1.125em; /* 18px */
+    line-height: 1;
+}
+
+h6 {
+    font-size: 1em; /* 16px */
+    line-height: 1.5;
 }
