--- a/art128/base-togglenav/css/style.css
+++ b/art128/base-togglenav/css/style.css
@@ -278,6 +278,7 @@ body.demo::before {
     .site-header .container {
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
 }
 
@@ -355,7 +356,7 @@ section {
         display: inline-block;
         cursor: pointer;
         padding: .3em .8em;
-        margin: .8em 0;
+        margin: 0;
         border: 1px solid black;
     }
     .toggle-nav .site-nav .menu-button::selection {
