--- a/art128/final v-1/css/style.css
+++ b/art128/final v-1/css/style.css
@@ -36,7 +36,7 @@
 
 body {
     font-size: 87.5%; /* 14px */
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: Neue Haas Grotesk Display Pro, Helvetica, sans-serif;
     line-height: 1.5;
     color: rgba(0, 0, 0, .8);
 }
@@ -48,6 +48,7 @@ body {
 */
 
 h1, h2, h3, h4, h5, h6 {
+    font-family: garamond premiere pro;
     margin: .5em 0;}
 
 h1 {
@@ -56,6 +57,7 @@ h1 {
 }
 
 h2 {
+    font-family: garamond premiere pro;
     font-size: 2.25em; /* 36px */
     line-height: 1.1;
 }
@@ -119,10 +121,12 @@ img {
 .button,
 button {
     font-size: inherit;
+    font-family: grotesk;
     line-height: 1;
-    background-color: rgba(0, 0, 255, 1);
-    border: 1px solid rgba(0, 0, 255, 1);
+    background-color: rgb(80, 80, 85);
+    border: 1px solid rgb(255, 255, 255);
     color: rgba(255, 255, 255, 1);
+    opacity: 62%;
     padding: 1em;
     display: inline-block;
     margin: .5em .5em .5em 0;
@@ -132,19 +136,20 @@ button {
 
 .button:hover,
 button:hover {
-    background-color: rgba(0, 0, 153, 1);
-    border-color: rgba(0, 0, 153, 1);
+    background-color: rgb(0, 0, 0);
+    border-color: rgb(255, 255, 255);
     color: rgba(255, 255, 255, 1);
     text-decoration: none;
 }
 
 .button.alt {
-    background-color: transparent;
-    color: rgba(0, 0, 153, 1);
+    background-color: whitesmoke;
+    opacity: 62%;
+    color: black
 }
 
 .button.alt:hover{
-    background-color: rgba(0, 0, 153, 1);
+    background-color: rgb(0, 0, 0);
     color: rgba(255, 255, 255, 1);
 }
 
@@ -458,6 +463,9 @@ form {
 /* HERO */
 
 .hero {
+    background-image: url(../images/plumeria.jpg);
+    background-size: cover;
+    background-position: center 60%;
     padding: 6em 4%;
     background-color: gray;
     text-align: center;
