--- a/art128/final v-1/css/style.css
+++ b/art128/final v-1/css/style.css
@@ -36,7 +36,7 @@
 
 body {
     font-size: 87.5%; /* 14px */
-    font-family: neue-haas-grotesk-text, sans-serif;
+    font-family: 'neue-haas-grotesk-text', sans-serif;
     line-height: 1.5;
     color: rgba(0, 0, 0, .8);
 }
@@ -48,7 +48,7 @@ body {
 */
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: garamond-premier-pro-display, serif;
+    font-family: 'garamond-premier-pro-display', georgia, serif;
     margin: .5em 0;}
 
 h1 {
@@ -57,7 +57,7 @@ h1 {
 }
 
 h2 {
-    font-family: garamond premiere pro;
+    font-family: 'garamond-premier-pro-display', georgia, serif;
     font-size: 2.25em; /* 36px */
     line-height: 1.1;
 }
