--- a/art128/final v-2/css/style.css
+++ b/art128/final v-2/css/style.css
@@ -115,6 +115,9 @@ a:hover {
     top: -9999px;
     left: -9999px;
 }
+.text-two-col {
+    columns: 2;
+}
 
 /*  IMAGES */   
 img {
@@ -372,12 +375,12 @@ article h2.subhead {
 
 article .subhead {
     font-weight: normal;
-    color: #595050;
+    color: #ffffff;
 }
 
 article .date {
     text-align: center;
-    color: #595050;
+    color: #ffffff;
     font-size: .75;
     margin-bottom: 3em;
 }
@@ -626,9 +629,33 @@ form {
     background-image: url(../images/Flowerred.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    padding: 6em 0;
+   
+    
 }
 
+#about-cg {
+    color: #ccc;
+    /* background-color: rgba(255,0,0,.5); */
+    /* background-image: url(../images/Flowerred.jpg); */
+    color: black;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 6em 0;
+   
+}
+
+#about-cg .top-banner {
+    height: 400px;
+    background-image: url(../images/Flowerred.jpg);
+    background-size: cover;
+    margin-bottom: 3em;
+}
+/* #about-cg .top-banner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+} */
 #contact {
     color: rgb(0, 0, 0);
     background: rgba(0,0,0,.1);
