--- a/art128/final v-2/css/style.css
+++ b/art128/final v-2/css/style.css
@@ -230,6 +230,23 @@ body.demo::before {
     }
 }
 
+/* SIDEBAR/ASIDE */
+aside {
+    padding: 2em 0;
+}
+
+@media (min-width: 768px) {
+    .column one-third {
+        display: grid;
+        grid-template-columns: 20em auto;
+    }
+    .column one-third aside {
+        border-right: 1px solid rgba(0, 0, 0, 0.1);
+        margin: 0 3em 2em 0;
+        padding: .3em 2em 0 0;
+    }
+}
+
 /* SEMANTIC GRID SYSTEM */
 
 .row > .column {
@@ -399,7 +416,8 @@ article p + h6 {
     line-height: 1.3;
  }*/
 
-article p:first-of-type:first-letter {
+article p:first-of-type:first-letter,
+p.dropcap::first-letter {
     font-size: 3em;
     line-height: 1em;
     background: black;
@@ -570,6 +588,40 @@ form {
     }
 }
 
+/* SUBNAV */
+
+.sub-nav {
+    position: sticky;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.sub-nav ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    /* height: 100vh; */
+}
+
+.sub-nav li{
+    padding: 1em;
+
+}
+
+.sub-nav a{
+    background-color: #888;
+    color: #888;
+    width: 20px;
+    height: 20px;
+    overflow: hidden;
+    display: block;
+    border-radius: 100%;
+
+}
+
 /* CARDS */
 
 .card {
@@ -656,6 +708,17 @@ form {
     height: 100%;
     object-fit: cover;
 } */
+#gardens {
+    color: #ccc;
+    /* background-color: rgba(255,0,0,.5); */
+    background-image: url(../images/hothouse.png); 
+    color: black;
+    background-position: 50% 70%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 6em 0;
+   
+}
 #contact {
     color: rgb(0, 0, 0);
     background: rgba(0,0,0,.1);
