--- a/art128/final v-3/css/style.css
+++ b/art128/final v-3/css/style.css
@@ -395,7 +395,8 @@ aside {
 
 /* SITE FOOTER */
 .site-footer {
-    /* background-color: rgb(81, 130, 227); */
+    background-color: rgb(99, 98, 98);
+    text
 }
 
 /* SECTIONS */
