--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@
 }
 
 body {
-    margin: 0
+    margin: 0;
+    display: grid;
+    grid-template-rows: auto auto 1fr
 }
 
 /* GLOBAL COLORS */
@@ -123,6 +125,7 @@ footer {
 }
 
 .hero h2 {
+
     font-size: 6em;
     line-height: 1;
     text-transform: uppercase;
@@ -157,6 +160,18 @@ footer {
     background-image: url(../images/mountainsunset.jpg);
     background-size: cover;
     background-position: center 60%;
+}
+
+.page-art249 .hero {
+    background-image: url(../images/barpatio.jpg);
+    background-size: cover;
+    background-position: 75%;
+}
+
+.page-art298 .hero {
+    background-image: url(../images/mainbar.jpg);
+    background-size: cover;
+    background-position: 75%;
 }
 
 /* COURSES SECTION */
