--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ footer {
 
 .page-art258 .hero {
     color: #888;
-    background-image: url(../images/makahabridge.jpg);
+    background-image: url(../images/thebreaks.jpg);
     background-size: cover;
     background-position: 75%;
 
