--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ footer {
     background-color: rgb(18, 10, 245);
     text-align: center;
     color: antiquewhite;
+
     padding: 6em 1em;
 }
 
@@ -130,6 +131,7 @@ footer {
     line-height: 1;
     text-transform: uppercase;
     margin: 0 auto;
+    text-align: center;
 }
 
 .hero p {
@@ -180,6 +182,7 @@ footer {
     background-image: url(../images/mainbar.jpg);
     background-size: cover;
     background-position: 75%;
+    padding: 30em 1em 6em 1em;
 }
 
 .coming-soon {
@@ -216,6 +219,11 @@ footer {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.coursework h2 {
+    text-align: center;
+    justify-content: center;
 }
 
 .website {
